[package]
name = "brew-uo"
version = "0.4.6"
authors = ["Hexin <hexium310@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.53"
colored = "2.0.0"
csv = "1.1.6"
itertools = "0.10.1"
prettytable-rs = "0.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"

[features]

[dev-dependencies]
indoc = "1.0.3"
pretty_assertions = "1.1.0"
