[package]
name = "brew-uo"
version = "0.4.8"
authors = ["Hexin <hexium310@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
colored = "2.0.0"
csv = "1.2.2"
itertools = "0.10.5"
prettytable-rs = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[features]

[dev-dependencies]
indoc = "1.0.9"
pretty_assertions = "1.3.0"
